# tv-vpn-panel

./: .gitignore  README.md  pyproject.toml
.run/: TV_VPN_Panel_Dry_Run.run.xml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/systemd/: tv-vpn-panel-fastapi.service
scripts/: install-from-git.sh  install-systemd.sh  sync-wireguard-client-names.py  update-from-git.sh  update-safe.sh  wireguard-client-routing.sh
tests/: conftest.py  test_api.py  test_store.py  test_system_ops.py  test_update_safe.py  test_wireguard_names.py  test_wireguard_profile_api.py  test_wireguard_registry.py  test_wireguard_routing.py  test_wireguard_routing_script.py  test_wireguard_status.py
tv_vpn_panel/: auth.py  config.py  main.py  models.py  store.py  system_ops.py  wireguard_names.py  wireguard_registry.py  wireguard_routing.py  wireguard_status.py  ws.py
tv_vpn_panel/templates/: index.html  wireguard.html
