[project]
name = "tv-vpn-panel"
version = "0.1.0"
description = "FastAPI/WebSocket panel for per-device VPN policy routing on Raspberry Pi"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
]

[tool.setuptools]
packages = ["tv_vpn_panel"]
include-package-data = true

[tool.setuptools.package-data]
tv_vpn_panel = ["templates/*.html"]
